Html and "All" functionality complete

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -1,4 +1,5 @@
 <div id="nav">
-    <a routerLink="about" class="nav-link">About</a>
+    <span id="title">Swanson</span>
     <a routerLink="swanson" class="nav-link">Swanson</a>
+    <a routerLink="about" class="nav-link">About</a>
 </div>
