--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,2 @@
-<html>
-    <head>
-
-    </head>
-        <body>
-            <nav></nav>
-            <router-outlet></router-outlet>
-          </body>
-          
-</html>
+<app-nav></app-nav>
+<router-outlet></router-outlet>
