--- a/src/app/components/swanson/swanson.component.html
+++ b/src/app/components/swanson/swanson.component.html
@@ -1,25 +1,33 @@
-<div>
-    <form #commands="ngForm">
-        <div class="form-group">
-            <input name="count" type="number" min="1" max="20" placeholder="1" ngModel />
-            <button  type="button" (click)="getQuote()">Random Quote</button>
-            <button  type="button" (click)="getQuotes(commands.value.count)">{{commands.value.count}} Random Quotes</button>
+<div id="main-container">
+    <div id="content-container">
+        <form id="form-container" #commands="ngForm">
+            <div class="form-group">
+                <button type="button" (click)="getQuote()" class="btn">Random Quote</button>
+                <button type="button" (click)="getQuotes(commands.value.count)" class="btn">{{commands.value.count}}
+                    Random Quotes</button>
+                <input name="count" type="number" min="2" max="20" ngModel />
+            </div>
+
+            <div class="form-group">
+                <input name="searchbar" type="text" placeholder="Search..." ngModel>
+                <button type="button" (click)="searchQuotes(commands.value.searchbar)" class="btn">Search
+                    Quotes</button>
+            </div>
+        </form>
+
+        <div *ngIf="quotes.length > 0" id="quote-container">
+            <p> {{quotes[index]}} </p>
+            <button *ngIf="index >= 1" (click)="prev()" type="button" class="btn" id="prev-btn">Prev</button>
+            <button *ngIf="quotes.length > 1" (click)="show = !show" type="button" class="btn" id="all-btn"> {{ !show ?
+                "All" : "Hide" }}</button>
+            <button *ngIf="index < quotes.length-1" (click)="next()" type="button" class="btn"
+                id="next-btn">Next</button>
         </div>
 
-        <div class="form-group">
-            <input name="searchbar" type="text" placeholder="Search..." ngModel>
-            <button type="button" (click)="searchQuotes(commands.value.searchbar)">Search for Quotes</button>
+        <div *ngIf="show == true" id="all-quotes">
+            <ul *ngFor="let q of quotes">
+                <li>{{q}}</li>
+            </ul>
         </div>
-    </form>
-
-    <div id="quote">
-        <button *ngIf="index >= 1" (click)="prev()" type="button" class="btn" id="left">Prev</button>
-        <p> {{quotes[index]}} </p>
-        <button *ngIf="quotes.length > 1" (click)="all()" type="button" class="btn" id="all">All</button>
-        <button *ngIf="index < quotes.length-1" (click)="next()" type="button" class="btn" id="right">Next</button>
-    </div>
-
-    <div id="joe">
-        <img [attr.src]="joe" />
     </div>
 </div>
