--- a/src/styles.css
+++ b/src/styles.css
@@ -10,3 +10,14 @@
 --back: rgb(252, 245, 241);
 --back2: rgb(230, 205, 191);
 }
+
+body {
+    padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-content: stretch;
+  align-items: stretch;
+  height: 100vh;   
+  background-color: var(--back);
+}
