Finished About component

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,1 +1,19 @@
-<p>about works!</p>
+<div id="container">
+    <h1>Welcome to Swanson</h1>
+    <h2>What is it?</h2>
+    <p>Swanson is a web application that uses the Swanson API to generate quotes from the character Ron Swanson from
+        Parks and Rec</p>
+    <h2>How does it work?</h2>
+    <h3>Getting 1 quote</h3>
+    <p>If you want a randomly selected Ron Swanson quote, just press the Random Quote button</p>
+    <h3>Getting multiple quotes</h3>
+    <p>If you want a selection of random quotes, enter the amount you want in the number bar, and press the Random
+        Quotes button.
+        You can cycle through the returned quotes with the Prev and Next buttons. If you want to see all of the returned
+        quotes at once, you can press the All/Hide button to toggle the results. </p>
+    <h3>Searching for quotes</h3>
+    <p>Got a particular quote you wanna look for? Or maybe you just want know how many times Ron says something about
+        bacon?
+        Just enter the term you want to look for in the searchbar and press the Search Quotes button
+    </p>
+</div>
