--- a/src/app/components/swanson/swanson.component.css
+++ b/src/app/components/swanson/swanson.component.css
@@ -1,13 +1,17 @@
 #main-container {
-    position:relative;
+    position: relative;
     /* top: -29px; */
+    height: fit-content;
+    padding: 0 20px;
     background-color: var(--back);
 
 }
+
 #content-container {
-    position:relative;
+    position: relative;
     top: 25px;
     display: flex;
+    flex-direction: row;
     gap: 10px;
     justify-content: center;
     width: 100%;
@@ -39,7 +43,7 @@
     cursor: pointer;
     margin: 10px;
     width: fit-content;
-    height: 50px;
+    height: 30px;
     border-radius: 10px;
     background-color: var(--main);
     color: white;
@@ -48,28 +52,45 @@
 
 }
 
-#form-container{
-max-width: 45%;
-background-color: var(--back2);
-border-radius: 10px;
-border: 1px solid pink;
+#form-container {
+    text-align: center;
+    max-width: 45%;
+    background-color: var(--back2);
+    border-radius: 10px;
+    padding: 10px;
 }
-
-.form-group{
-    margin: 5% auto;
-    border: 1px solid purple;
-}
-
 
 #all-quotes {
-
+    margin: 10% auto;
+    width: 45%;
 }
+
+.form-group {
+    margin: 5% auto;
+}
+
 /* For tablets */
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 780px) {
     #content-container {
-        display: block
+        width: 100%;
+        display: flex;
+        flex-direction: column;
     }
-    .form-group{
-    max-width: 50%;
+
+    .form-group {
+        width: 100%;
+    }
+
+    #form-container {
+        width: 100%;
+        margin: 0 auto;
+    }
+    #quote-container{
+        width:100%;
+        margin: 0 auto;
+    }
+    #all-quotes{
+        width:100%;
+        /* margin: 0 auto; */
     }
 }
